--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@ html,
 body,
 :root{
     height: 100%;
+    overflow: hidden;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
